# esp32-terminal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
assets/: gen_splash.py
components/esp_hid/private/: ble_hidh.h
components/esp_hid/src/: esp_hidh.c  nimble_hidh.c
components/libvterm/: CMakeLists.txt
components/wolfssh/: .component_hash  CHECKSUMS.json
components/wolfssh/src/: internal.c  ssh.c
components/wolfssl/: .component_hash
components/wolfssl/include/: user_settings.h
main/: CMakeLists.txt  Kconfig  bt_creds.h  bt_kbd.c  bt_kbd.h  bt_kbd_ui.c  bt_kbd_ui.h  display.h  display_mipi_dsi.c  esp_hid_gap.c  esp_hid_gap.h  font5x7.c  font5x7.h  font_terminus24.h  idf_component.yml  main.c  menu.c  menu.h  slave_ota.c  slave_ota.h  ssh_creds.h  ssh_targets.c  ssh_targets.h  ssh_term.c  ssh_term.h  term.c  term.h  touch.c  touch.h  wifi_creds.h  wifi_time.c  wifi_time.h
